syntax = "proto3";

package common;

option go_package = "github.com/BullionBear/sequex/internal/model/protobuf/common/common;commonpb";

enum RequestType {
    REQUEST_TYPE_UNDEFINED = 0;
    REQUEST_TYPE_CONFIG = 1;
    REQUEST_TYPE_HEALTH = 2;
    REQUEST_TYPE_VARZ = 3;
}

message ErrorResponse {
    int64 id = 1;
    int64 code = 2;
    string message = 3;
}

message EmptyRequest {
    int64 id = 1;
    RequestType type = 2;
}